K3S/tools/registry-bis/full.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry-system-bis
---
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: registry-system-bis
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui-svc
  namespace: registry-system-bis
spec:
  type: ClusterIP
  selector:
    app: docker-registry-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: docker-registry-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: registry-system-bis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.8.3
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
              subPath: registry/data
            - name: registry-config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-pvc
        - name: registry-config
          configMap:
            name: registry-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: registry-system-bis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: docker-registry-ui
          image: joxit/docker-registry-ui:2.5.7
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-http
  namespace: registry-system-bis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: registry-bis.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui-http
  namespace: registry-system-bis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: registry-ui-bis.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui-svc
                port:
                  number: 80
